--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "dawn",
-    "description": "A Ghost theme",
-    "version": "1.0.0",
+    "name": "dawn-adapted",
+    "description": "A Ghost theme Dawn, which forked and adapted by Ilia Zhitenev",
+    "version": "1.0.1",
     "private": true,
     "engines": {
         "ghost": ">=5.0.0"
