--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "dawn-adapted",
     "description": "A Ghost theme Dawn, which forked and adapted by Ilia Zhitenev",
-    "version": "1.0.1",
+    "version": "1.0.2",
     "private": true,
     "engines": {
         "ghost": ">=5.0.0"
@@ -19,7 +19,7 @@
     ],
     "docs": "https://dawn.ghost.io/about/",
     "config": {
-        "posts_per_page": 5,
+        "posts_per_page": 10,
         "image_sizes": {
             "xs": {
                 "width": 150
@@ -42,6 +42,20 @@
         },
         "card_assets": true,
         "custom": {
+            "growth_posts_widget_enabled": {
+                "type": "boolean",
+                "default": true,
+                "group": "homepage"
+            },
+            "growth_posts_per_page": {
+                "type": "select",
+                "options": [
+                    "3",
+                    "4",
+                    "5"
+                ],
+                "default": "5"
+            },
             "navigation_layout": {
                 "type": "select",
                 "options": ["Logo on the left", "Logo in the middle", "Stacked"],
